# 2D-2D-Registration

./: .gitignore  CMakeLists.txt  README.md
.zencoder/rules/: repo.md
MatlabAppLog/: appLog.txt
Output/: P_Imf.txt  calibration_error.txt
Output/AP/: P_ImfAP.txt  blob_pixels.csv  final_plate_points.txt  icp_2D.txt  output_AP.json
Output/AP/PD/: AP_2D.txt
Output/LP/: P_ImfLP.txt  blob_pixels.csv  final_plate_points.txt  icp_2D.txt  output_LP.json
Output/LP/PD/: LP_2D.txt
include/: Calibration.h  Center_detection.h  ImageInpaint.h  JsonCheck.h  LC.hpp  Outlier_angle.h  RegistrationCheck.h  S_F_B.h  blob_detection.h  crop_image.h  dbscan.h  decompose_camera.h  estimate_camera_matrix.h  icp_angle.h  kmeans.h  normalise2dpts.h  plate12icp.h  plate12indexing.h  plate12withICP.h  readdicom.h  ref_conversion.h  registration_check.h  rq3.h  writedicom.h
src/: Calibration.cpp  Center_detection.cpp  ImageInpaint.cpp  JsonCheck.cpp  Outlier_angle.cpp  RegistrationCheck.cpp  S_F_B.cpp  blob_detection.cpp  crop_image.cpp  dbscan.cpp  decompose_camera.cpp  estimate_camera_matrix.cpp  icp.cpp  icp_angle.cpp  kmeans.cpp  maindcm.cpp  maindcmbatch.cpp  plate12icp.cpp  plate12indexing.cpp  ref_conversion.cpp  registration_check.cpp
